--- a/common/src/main/res/layout/dialog_loading.xml
+++ b/common/src/main/res/layout/dialog_loading.xml
@@ -4,20 +4,27 @@
 
     <data>
 
+        <variable
+            name="loadingText"
+            type="String" />
     </data>
 
     <LinearLayout
-        android:layout_width="82dp"
-        android:layout_height="82dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="@drawable/bg_dialog_white"
         android:gravity="center_horizontal"
         android:orientation="vertical"
         android:paddingTop="6dp">
 
         <ProgressBar
             android:id="@+id/progress_bar"
+            style="@style/BaseProgressBar"
             android:layout_width="36dp"
             android:layout_height="36dp"
-            android:layout_marginTop="6dp" />
+            android:layout_marginStart="23dp"
+            android:layout_marginTop="6dp"
+            android:layout_marginEnd="23dp" />
 
         <TextView
             android:id="@+id/tv_content"
@@ -26,7 +33,7 @@
             android:layout_marginLeft="2dp"
             android:layout_marginRight="2dp"
             android:gravity="center"
-            android:text="加载中.."
+            android:text="@{loadingText}"
             android:textColor="@color/colorPrimary"
             android:textSize="12sp"
             tools:text="加载中.." />
