--- a/common/src/main/res/layout/dialog_loading.xml
+++ b/common/src/main/res/layout/dialog_loading.xml
@@ -34,8 +34,8 @@
             android:layout_marginRight="2dp"
             android:gravity="center"
             android:text="@{loadingText}"
-            android:textColor="@color/colorPrimary"
             android:textSize="12sp"
-            tools:text="加载中.." />
+            tools:text="加载中.."
+            tools:textColor="@color/colorPrimary" />
     </LinearLayout>
 </layout>
