feat(loadingDialog):add bindingAdapter.

--- a/common/src/main/res/drawable/bg_dialog_white.xml
+++ b/common/src/main/res/drawable/bg_dialog_white.xml
@@ -5,7 +5,8 @@
     <padding
         android:right="@dimen/smallMarginSize"
         android:top="@dimen/smallMarginSize"
-        android:left="@dimen/smallMarginSize"/>
+        android:left="@dimen/smallMarginSize"
+        android:bottom="@dimen/smallMarginSize"/>
     <corners android:radius="10dp" />
     <solid android:color="@color/white" />
 
