--- a/common/src/main/res/layout/dialog_loading.xml
+++ b/common/src/main/res/layout/dialog_loading.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
 
     <data>
@@ -24,17 +25,19 @@
             android:layout_height="36dp"
             android:layout_marginStart="23dp"
             android:layout_marginTop="6dp"
-            android:layout_marginEnd="23dp" />
+            android:layout_marginEnd="23dp"
+            android:layout_marginBottom="6dp" />
 
         <TextView
             android:id="@+id/tv_content"
             android:layout_width="match_parent"
-            android:layout_height="40dp"
+            android:layout_height="wrap_content"
             android:layout_marginLeft="2dp"
             android:layout_marginRight="2dp"
+            android:layout_marginBottom="6dp"
             android:gravity="center"
-            android:text="@{loadingText}"
             android:textSize="12sp"
+            app:text="@{loadingText}"
             tools:text="加载中.."
             tools:textColor="@color/colorPrimary" />
     </LinearLayout>
