--- a/test/src/main/res/layout/activity_main.xml
+++ b/test/src/main/res/layout/activity_main.xml
@@ -7,44 +7,49 @@
 
     </data>
 
-    <LinearLayout
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical"
-        tools:context="com.example.test.MainActivity">
+        android:layout_height="wrap_content">
 
-        <EditText
-            android:id="@+id/et_input"
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Hello World!"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            android:orientation="vertical"
+            tools:context="com.example.test.MainActivity">
 
-        <Button
-            android:id="@+id/encryptBtn"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="encrypt" />
+            <EditText
+                android:id="@+id/et_input"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Hello World!"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
 
-        <Button
-            android:id="@+id/loadingBtn"
-            android:text="loading Dialog"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            <Button
+                android:id="@+id/encryptBtn"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="encrypt" />
 
-        <Button
-            android:id="@+id/test"
-            android:text="test"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            <Button
+                android:id="@+id/loadingBtn"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="loading Dialog" />
 
-        <Button
-            android:id="@+id/crash_test_btn"
-            android:text="crash test"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
-    </LinearLayout>
+            <Button
+                android:id="@+id/test"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="test" />
+
+            <Button
+                android:id="@+id/crash_test_btn"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="crash test" />
+        </LinearLayout>
+    </ScrollView>
 </layout>
