--- a/app/src/main/res/drawable-v24/ic_launcher_foreground.xml
+++ b/app/src/main/res/drawable-v24/ic_launcher_foreground.xml
@@ -1,34 +1,36 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:aapt="http://schemas.android.com/aapt"
     android:width="108dp"
     android:height="108dp"
-    android:viewportWidth="108"
-    android:viewportHeight="108">
-    <path
-        android:fillType="evenOdd"
-        android:pathData="M32,64C32,64 38.39,52.99 44.13,50.95C51.37,48.37 70.14,49.57 70.14,49.57L108.26,87.69L108,109.01L75.97,107.97L32,64Z"
-        android:strokeWidth="1"
-        android:strokeColor="#00000000">
-        <aapt:attr name="android:fillColor">
-            <gradient
-                android:endX="78.5885"
-                android:endY="90.9159"
-                android:startX="48.7653"
-                android:startY="61.0927"
-                android:type="linear">
-                <item
-                    android:color="#44000000"
-                    android:offset="0.0" />
-                <item
-                    android:color="#00000000"
-                    android:offset="1.0" />
-            </gradient>
-        </aapt:attr>
-    </path>
-    <path
-        android:fillColor="#FFFFFF"
-        android:fillType="nonZero"
-        android:pathData="M66.94,46.02L66.94,46.02C72.44,50.07 76,56.61 76,64L32,64C32,56.61 35.56,50.11 40.98,46.06L36.18,41.19C35.45,40.45 35.45,39.3 36.18,38.56C36.91,37.81 38.05,37.81 38.78,38.56L44.25,44.05C47.18,42.57 50.48,41.71 54,41.71C57.48,41.71 60.78,42.57 63.68,44.05L69.11,38.56C69.84,37.81 70.98,37.81 71.71,38.56C72.44,39.3 72.44,40.45 71.71,41.19L66.94,46.02ZM62.94,56.92C64.08,56.92 65,56.01 65,54.88C65,53.76 64.08,52.85 62.94,52.85C61.8,52.85 60.88,53.76 60.88,54.88C60.88,56.01 61.8,56.92 62.94,56.92ZM45.06,56.92C46.2,56.92 47.13,56.01 47.13,54.88C47.13,53.76 46.2,52.85 45.06,52.85C43.92,52.85 43,53.76 43,54.88C43,56.01 43.92,56.92 45.06,56.92Z"
-        android:strokeWidth="1"
-        android:strokeColor="#00000000" />
+    android:viewportWidth="2178.7234"
+    android:viewportHeight="2178.7234">
+    <group android:translateX="577.3617"
+        android:translateY="577.3617">
+        <path
+            android:pathData="M885.76,921.28h-106.56l-0.32,-26.77c0.11,-0.75 -0.11,-68.27 -7.47,-171.52 -8.96,-125.65 -21.76,-243.41 -167.57,-334.83l24.53,-26.03c78.72,46.93 146.24,112 178.88,167.36 42.35,72 56.85,110.29 69.55,176.85 21.65,112.64 9.49,211.31 8.96,214.93z"
+            android:fillColor="#755E49"/>
+        <path
+            android:pathData="M565.65,893.4c0,14.93 -1.39,29.44 -4.05,43.52H129.28c-2.67,-14.08 -4.05,-28.69 -4.05,-43.52 0,-25.81 4.27,-50.67 11.95,-73.81 29.76,-88.64 111.79,-152.32 208.21,-152.32 96.43,0 178.45,63.68 208.21,152.32 7.89,23.15 12.05,48 12.05,73.81z"
+            android:fillColor="#FF9D00"/>
+        <path
+            android:pathData="M989.12,926.61c0,16.21 -6.61,30.83 -17.17,41.49 -10.56,10.67 -25.28,17.17 -41.49,17.17h-838.4c-32.43,0 -58.67,-26.24 -58.67,-58.67 0,-16.21 6.61,-30.83 17.17,-41.49 10.67,-10.56 25.28,-17.17 41.49,-17.17h838.4c32.43,0 58.67,26.24 58.67,58.67z"
+            android:fillColor="#00B7FF"/>
+        <path
+            android:pathData="M981.87,399.57c10.45,0 14.51,-17.17 5.87,-24.43 -31.15,-26.24 -91.73,-64.21 -181.01,-64.75 -89.92,-0.64 -150.29,38.51 -180.91,65.28 -8.53,7.47 -4.37,24.32 5.97,24.32l350.08,-0.43z"
+            android:fillColor="#02C652"/>
+        <path
+            android:pathData="M882.77,158.61c7.36,-7.36 -1.81,-22.4 -13.12,-21.44 -40.64,3.52 -110.29,19.52 -173.76,82.24 -64,63.15 -79.04,133.44 -81.81,174.08 -0.75,11.31 14.08,20.37 21.44,13.01l247.25,-247.89z"
+            android:fillColor="#02C652"/>
+        <path
+            android:pathData="M648,391.89c7.36,-7.36 -1.81,-22.4 -13.12,-21.44 -40.64,3.52 -110.29,19.52 -173.76,82.24 -64,63.15 -79.04,133.44 -81.81,174.08 -0.75,11.31 14.08,20.37 21.44,13.01l247.25,-247.89z"
+            android:fillColor="#02C652"/>
+        <path
+            android:pathData="M657.92,44.69c0,-10.45 -17.17,-14.51 -24.43,-5.87 -26.24,31.15 -64.21,91.73 -64.75,181.01 -0.64,89.92 38.51,150.29 65.28,180.91 7.47,8.53 24.32,4.37 24.32,-5.97l-0.43,-350.08z"
+            android:fillColor="#02C652"/>
+        <path
+            android:pathData="M657.92,372.59c0,-10.45 -17.17,-14.51 -24.43,-5.87 -26.24,31.15 -64.21,91.73 -64.75,181.01 -0.64,89.92 38.51,150.29 65.28,180.91 7.47,8.53 24.32,4.37 24.32,-5.97l-0.43,-350.08z"
+            android:fillColor="#02C652"/>
+        <path
+            android:pathData="M642.67,402.24c10.45,0 14.51,-17.17 5.87,-24.43 -31.15,-26.24 -91.73,-64.21 -181.01,-64.75 -89.92,-0.64 -150.29,38.51 -180.91,65.28 -8.53,7.47 -4.37,24.32 5.97,24.32l350.08,-0.43z"
+            android:fillColor="#02C652"/>
+    </group>
 </vector>
