--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,11 +1,16 @@
 <resources>
 
     <!-- Base application theme. -->
-    <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
+    <style name="AppTheme" parent="BaseAppTheme">
         <!-- Customize your theme here. -->
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
     </style>
 
+    <!-- v21有适配 -->
+    <style name="AppTheme.Launcher" parent="BaseAppTheme.Launcher">
+        <item name="android:windowBackground">@drawable/layer_launcher</item>
+        <item name="android:windowIsTranslucent">false</item>
+    </style>
 </resources>
