--- a/common/src/main/res/values/styles.xml
+++ b/common/src/main/res/values/styles.xml
@@ -1,12 +1,27 @@
 <resources>
 
     <!-- Base application theme. -->
-    <style name="BaseAppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
+    <style name="BaseAppTheme" parent="Theme.AppCompat.Light">
         <!-- Customize your theme here. -->
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
         <item name="android:windowAnimationStyle">@style/AnimationActivity</item>
+    </style>
+
+    <!--  SplashActivity  可以自己再设置一个WindowBackground属性-->
+    <style name="BaseAppTheme.Launcher" parent="Theme.AppCompat.Light.NoActionBar">
+        <item name="android:windowFullscreen">true</item>
+        <!-- 自己设置图片背景 -->
+        <item name="android:windowBackground">@color/transparent</item>
+        <!-- 加载图片则选择false 否则选择true -->
+        <item name="android:windowIsTranslucent">true</item>
+        <!-- 设置window过度效果 禁用窗口的预览动画 -->
+        <item name="android:windowDisablePreview">false</item>
+        <item name="android:windowNoTitle">true</item>
+        <item name="windowNoTitle">true</item>
+        <item name="windowActionBar">false</item>
+
     </style>
 
     <!--Activity 切换效果-->
@@ -21,7 +36,7 @@
         <item name="android:activityCloseEnterAnimation">@anim/close_enter</item>
     </style>
 
-    <!--设置progressBar颜色  v21 (5.0)以后才能设置？-->
+    <!--设置progressBar颜色  v21 (5.0)以后才能设置-->
     <style name="BaseProgressBar" parent="Base.Widget.AppCompat.ProgressBar">
 
     </style>
