--- a/app/src/main/res/drawable/layer_launcher.xml
+++ b/app/src/main/res/drawable/layer_launcher.xml
@@ -2,14 +2,14 @@
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android"
     android:opacity="opaque">
     <!--android:opacity="opaque" 不透明的-->
-    <item >
+    <item>
         <shape android:shape="rectangle">
-            <solid android:color="@color/white"/>
+            <solid android:color="@color/white" />
         </shape>
     </item>
     <item android:bottom="35dp">
         <bitmap
-            android:gravity="bottom"
-            android:src="@drawable/ic_launcher" />
+            android:gravity="bottom|center_horizontal"
+            android:src="@drawable/ic_launcher_splash" />
     </item>
 </layer-list>
