--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -8,23 +8,14 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/white"
-        android:gravity="center"
         android:orientation="vertical">
 
         <ImageView
+            android:layout_gravity="center_horizontal"
             android:layout_width="75dp"
             android:layout_height="75dp"
             android:contentDescription="@string/img"
             android:scaleType="fitXY"
-            android:src="@drawable/ic_launcher" />
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
-            android:text="@string/app_name"
-            android:textColor="@color/black"
-            android:textSize="20sp" />
+            android:src="@drawable/ic_launcher_splash" />
     </LinearLayout>
 </layout>
