--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -1,21 +1,40 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools">
 
     <data>
 
+        <variable
+            name="viewModel"
+            type="com.yu.hu.traveling.vm.SplashViewModel" />
     </data>
 
-    <LinearLayout
+    <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
 
         <ImageView
+            android:id="@+id/iv_bg"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
             android:layout_gravity="center_horizontal"
-            android:layout_width="75dp"
-            android:layout_height="75dp"
             android:contentDescription="@string/img"
-            android:scaleType="fitXY"
+            android:layout_marginBottom="150dp"
+            android:scaleType="centerCrop"
             android:src="@drawable/ic_launcher_splash" />
-    </LinearLayout>
+
+        <TextView
+            android:id="@+id/tv_skip"
+            text="@{viewModel.translate2String(viewModel.getRestTime())}"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="top|end"
+            android:layout_marginTop="16dp"
+            android:layout_marginEnd="16dp"
+            android:layout_marginRight="16dp"
+            android:background="@drawable/bg_skip"
+            android:textColor="@color/white"
+            tools:text="跳过 2 s" />
+    </FrameLayout>
 </layout>
